--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -7,6 +7,7 @@ engines:
       - javascript
   eslint:
     enabled: true
+    channel: "eslint-4"
     checks:
           import/extensions:
             enabled: false
